# text-web-and-media-analytics-assignment-2

./: .gitignore  README.md  Text, Web, & Media Analytics Assignment 2.ipynb  data_structures.py  deprecated.py  ir_evaluations.py  ir_models.py  parsing_functions.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
RankingOutputs/: BM25_R101Ranking  BM25_R102Ranking  BM25_R103Ranking  BM25_R104Ranking  BM25_R105Ranking  BM25_R106Ranking  BM25_R107Ranking  BM25_R108Ranking  BM25_R109Ranking  BM25_R110Ranking  BM25_R111Ranking  BM25_R112Ranking  BM25_R113Ranking  BM25_R114Ranking  BM25_R115Ranking  BM25_R116Ranking  BM25_R117Ranking  BM25_R118Ranking  BM25_R119Ranking  BM25_R120Ranking  BM25_R121Ranking  BM25_R122Ranking  BM25_R123Ranking  BM25_R124Ranking  BM25_R125Ranking  BM25_R126Ranking  BM25_R127Ranking  BM25_R128Ranking  BM25_R129Ranking  BM25_R130Ranking  BM25_R131Ranking  BM25_R132Ranking  BM25_R133Ranking  BM25_R134Ranking  BM25_R135Ranking  BM25_R136Ranking  BM25_R137Ranking  BM25_R138Ranking  BM25_R139Ranking  BM25_R140Ranking  (+110 more)
assignment-2/: Text, Web, & Media Analytics Assignment 2.ipynb  asm2_task4-5.ipynb  data_structures.py  deprecated.py  evaluation_summary.csv  ir_models.py  ir_tools.py  parsing_functions.py  requirements.txt  task6.ipynb  yannik.ipynb
python/: pyproject.toml
