[tool.poetry]
name = "text-web-and-media-analytics-assignment-2"
version = "0.1.0"
description = ""
authors = ["Bronson Coombs <Bronson.Coombs@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.2"
ipykernel = "6.29.4"
pandas = "2.2.0"
regex = "2023.12.25"

[tool.poetry.dev-dependencies]
ruff = "0.3.4"

[tool.ruff]
line-length = 120
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"